@@ -7,6 +7,7 @@ mdadm (3.3.2-2) UNRELEASED; urgency=medium
   * removed references to MAIL_TO from /etc/default/mdadm (pre-2.x mdadm)
   * removed AUTOSTART variable from /etc/default/mdadm
     (system will start arrays listed in mdadm.conf)
+  * simplify d/rules, build udeb in a subdir (for now, to be removed)
 
  -- Michael Tokarev <mjt@tls.msk.ru>  Sat, 04 Oct 2014 15:43:57 +0400
 
